# trackballs

./: Makefile.am  Makefile.in.rej  configure.ac  trackballs-fedora5.spec
docs/: Makefile.am
po/: Makefile.in.in  de.gmo  de.po
share/: trackballs.6
share/icons/: Makefile.am  trackballs.desktop  trackballs.desktop.in
share/levels/: lv1.scm
src/: animated.cc  animated.h  animator.cc  baby.cc  baby.h  ball.cc  ball.h  bird.cc  black.cc  cactus.cc  editMode.cc  editMode.h  editMode_codes.h  editWindows.cc  enterHighScoreMode.cc  flag.cc  flag.h  game.cc  game.h  gameHook.cc  gameHook.h  general.h  glHelp.cc  guile.cc  guile.cc.x  guile.h  helpMode.cc  hofMode.cc  mainMode.cc  menuMode.cc  mmad.cc  player.cc  scoreSign.cc  scoreSign.h  settings.cc  settingsMode.cc  setupMode.cc  sound.cc  sound.h
