SUBDIRS = src share  po docs #m4
#po intl
# Note, i removed po from the subdirs since that bloody 
# locale support doesn't work anyway... I'm getting tired of
# this whole autoconf + gettextize mess
EXTRA_DIST = config.rpath  FAQ editor.jpg header.jpg screen.jpg gettext.h mkinstalldirs po/Makefile.in.in $(wildcard *.spec)

ACLOCAL_AMFLAGS = -I m4
